# M.I.A_Multimodal_Inteligent_Assistant

./: .env.example  .flake8  .gitignore  ACTIONEXECUTOR_CAPABILITIES.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  PATENTS.md  README.md  RELEASE_CHECKLIST.md  REORGANIZATION_COMPLETE.md  SECURITY.md  STARTUP_GUIDE.md  USAGE.md  agent_isolated_test.txt  agente_simple_test.txt  audio_utils.py  automation_util.py  build-release.bat  build-release.sh  build_desktop.bat  build_exe.bat  chat_interface.py  cleanup_project.py  cognitive_architecture.py  create_init_files.py  demo_languages.sh  dev.sh  diagnose.bat  docker-compose.yml  install.bat  llm_inference.py  main.py  mia_desktop.py  mia_launcher.py  mia_lite.py  mia_notes.md  (+25 more)
.github/workflows/: ci.yml  python-package.yml  release.yml
audio/: __init__.py  audio_utils.py  speech_generator.py  speech_processor.py
config/: .env.example  config.json  config.yaml
core/: __init__.py
docs/: CHANGELOG.md  LINUX_INSTALLATION.md  PROJECT_STRUCTURE.md  README.md
docs/developer/: API_REFERENCE.md  PROJECT_STRUCTURE.md  REQUIREMENTS_CONSOLIDATION_SUMMARY.md  REQUIREMENTS_GUIDE.md  TECHNICAL_ARCHITECTURE.md  TECHNICAL_DOCUMENTATION_SUMMARY.md
docs/user/: INSTALLATION.md  STARTUP_GUIDE.md  USAGE.md  USAGE_GUIDE.md
langchain/: __init__.py
learning/: user_learning.py
llm/: __init__.py  llm_manager.py
main_modules/: chat_interface.py  main.py
main_modules/memory/: chroma.sqlite3
memory/: chroma.sqlite3  knowledge_graph.py  long_term_memory.py
multimodal/: processor.py  vision_processor.py
planning/: action_planner.py
plugins/: plugin_manager.py
scripts/: dev_qa.py
scripts/development/: check-system.sh  quickstart.sh  test_ollama.py
scripts/install/: install.bat  install.sh  install_ffmpeg.bat  uninstall.sh
scripts/linux/: build_executable.sh  mia@.service  quickstart.sh  setup-system.sh
scripts/run/: run-audio.bat  run-mixed.bat  run-text-only.bat  run.bat  run.sh  webui.bat  webui.sh
security/: security_manager.py
src/mia/: __init__.py  __version__.py  benchmark_config.py  benchmark_runner.py  cache_manager.py  code_quality_manager.py  config_manager.py  documentation_generator.py  error_handler.py  exceptions.py  localization.py  main.py  main_legacy.py  performance_monitor.py  resource_manager.py
src/mia/adaptive_intelligence/: README.md  __init__.py  context_infuser.py  dialog_manager.py  episodic_memory_personalization.py  feedback_loop.py  hybrid_llm_orchestration.py  knowledge_memory_graph.py  modality_manager.py  multi_device_synchronization.py  multimodal_perception_suite.py  observability_admin_console.py  proactive_automation_engine.py  tests.py  workflow_automation_composer.py
src/mia/agents/: __init__.py  orchestrator.py
src/mia/api/: server.py
src/mia/audio/: __init__.py  audio_resource_manager.py  audio_utils.py  hotword_detector.py  speech_generator.py  speech_processor.py  vad_detector.py
src/mia/benchmarks/: README.md  __init__.py  arc_agi.py  base.py  gaia.py  gpqa.py  mmmu.py  osworld.py  runner.py  swe_bench.py  webvoyager.py
src/mia/cli/: __init__.py  display.py  parser.py  utils.py
src/mia/config/: __init__.py  config_manager.py
src/mia/core/: __init__.py  action_executor.py  agent.py  agent_v1.py  benchmarks.py  channels.py  cognitive_architecture.py  guardrails.py  orchestrator.py  persistent_memory.py  planner.py  skills.py  tool_registry.py
src/mia/deployment/: deployment_manager.py
src/mia/gateway/: manager.py
src/mia/intelligence/: __init__.py  arc_solver.py  grid_dsl.py  hypothesis.py  patterns.py  program_synthesis.py  search.py
src/mia/langchain/: langchain_verifier.py
src/mia/llm/: __init__.py  embedding_manager.py  llm_inference.py  llm_manager.py
src/mia/mcp/: __init__.py  client.py  manager.py
src/mia/memory/: __init__.py  chroma.sqlite3  knowledge_graph.py  long_term_memory.py
src/mia/messaging/: __init__.py  telegram_client.py
src/mia/multimodal/: __init__.py  ocr_processor.py  processor.py  vision_processor.py  vision_resource_manager.py
src/mia/planning/: __init__.py  calendar_integration.py
src/mia/plugins/: plugin_manager.py
src/mia/providers/: __init__.py  defaults.py  registry.py
src/mia/reasoning/: __init__.py  algorithmic.py  cognitive_kernel.py  hybrid_engine.py  metacognition.py  solvers.py
src/mia/sandbox/: wasi_runner.py
src/mia/security/: security_manager.py
src/mia/skills/: basic_tools.py
src/mia/system/: __init__.py  desktop_automation.py  system_control.py
src/mia/tools/: __init__.py  action_executor.py  document_generator.py  document_intelligence.py
src/mia/ui/: app.py
src/mia/utils/: __init__.py  automation_util.py  email_util.py  message_util.py  note_taking_utils.py  safe_arithmetic.py
src/mia/web/: __init__.py  web_agent.py  webui.py
system/: __init__.py  system_control.py
tests/: conftest.py  test_agent.py  test_comprehensive.py  test_error_handling.py  test_integration.py  test_langchain_verifier.py  test_priority_4.py  verify_sota.py
tests/data/: test_file.txt
tests/e2e/: test_agent_e2e.py
tests/integration/: conftest.py  test_agent_integration.py  test_comprehensive_integration.py  test_end_to_end.py  test_integration.py  test_main_integration.py  test_mia_integration.py  test_multimodal_flows.py  test_performance.py
tests/unit/: test_action_executor.py  test_agent.py  test_agent_fixed.py  test_agent_memory.py  test_benchmark_config.py  test_benchmark_runner.py  test_cognitive_architecture.py  test_comprehensive.py  test_comprehensive_fixed.py  test_config_manager.py  test_config_manager_edge.py  test_error_handler.py  test_error_handling.py  test_error_handling_fixed.py  test_exceptions.py  test_langchain_verifier.py  test_llm_manager.py  test_main.py  test_multimodal_processor.py  test_multimodal_processor_fixed.py  test_priority_4.py  test_speech_generator.py  test_tool_calling_agent.py  test_vision_processor.py
utils/: config_manager.py  logging_config.py  message_util.py  note_taking_utils.py
