[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mia-successor"
dynamic = ["version", "dependencies"]
description = "M.I.A - Multimodal Intelligent Assistant"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Matheus Pullig Soranço de Carvalho", email = "matheussoranco@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/Matheussoranco/M.I.A-The-successor-of-pseudoJarvis"
Documentation = "https://github.com/Matheussoranco/M.I.A-The-successor-of-pseudoJarvis/blob/main/README.md"
Repository = "https://github.com/Matheussoranco/M.I.A-The-successor-of-pseudoJarvis"
Issues = "https://github.com/Matheussoranco/M.I.A-The-successor-of-pseudoJarvis/issues"

[project.scripts]
mia = "mia.main:main"
mia-api = "mia.api.server:main"

[tool.setuptools.dynamic]
version = {attr = "mia.__version__.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["mia"]
skip_glob = ["**/migrations/*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[project.optional-dependencies]
full = [
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "huggingface_hub>=0.19.3",
    "langchain>=0.1.0",
    "chromadb>=0.4.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "Pillow>=9.5.0",
    "psutil>=5.9.0"
]
api = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0"
]
audio = [
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "pydub>=0.25.1",
    "pyttsx3>=2.90",
    "speechrecognition>=3.10.0"
]
vision = [
    "Pillow>=9.5.0"
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "bandit>=1.7.0"
]
