[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mia-successor"
dynamic = ["version", "dependencies"]
description = "M.I.A - Multimodal Intelligent Assistant"
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [
    {name = "Matheus Pullig Soranço de Carvalho", email = "matheussoranco@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/Matheussoranco/M.I.A-The-successor-of-pseudoJarvis"
Documentation = "https://github.com/Matheussoranco/M.I.A-The-successor-of-pseudoJarvis/blob/main/README.md"
Repository = "https://github.com/Matheussoranco/M.I.A-The-successor-of-pseudoJarvis"
Issues = "https://github.com/Matheussoranco/M.I.A-The-successor-of-pseudoJarvis/issues"

[project.scripts]
mia = "mia.main:main"
mia-api = "mia.api.server:main"

[tool.setuptools.dynamic]
version = {attr = "mia.__version__.__version__"}
dependencies = {file = ["requirements-core.txt"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
known_first_party = ["mia"]
skip_glob = ["**/migrations/*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[project.optional-dependencies]
ai = [
    "transformers>=4.36.0",
    "torch>=2.0.0",
    "huggingface_hub>=0.19.3",
    "langchain>=0.1.0",
    "chromadb>=0.5.0",
    "networkx>=3.0"
]
audio = [
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "pydub>=0.25.1",
    "pyttsx3>=2.90",
    "speechrecognition>=3.10.0",
    "openai-whisper>=20231117",
    "webrtcvad>=2.0.10",
    "piper-tts>=1.2.0",
    "TTS>=0.22.0"
]
vision = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "Pillow>=9.5.0",
    "pandas>=1.5.0"
]
automation = [
    "openpyxl>=3.1.3",
    "python-pptx>=0.6.21",
    "python-docx>=1.1.0",
    "reportlab>=4.1.0",
    "pywhatkit>=5.4",
    "selenium>=4.10.0",
    "pyperclip>=1.8.2",
    "plyer>=2.1.0",
    "wikipedia>=1.4.0",
    "psutil>=5.9.0",
    "pywinauto>=0.6.8"
]
messaging = [
    "telethon>=1.36.0"
]
sandbox = [
    "wasmtime>=12.0.0",
    "wasmer>=1.2.0"
]
api = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0"
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
    "factory-boy>=3.2.0",
    "faker>=15.0.0",
    "responses>=0.21.0"
]
full = [
    "transformers>=4.36.0",
    "torch>=2.0.0",
    "huggingface_hub>=0.19.3",
    "langchain>=0.1.0",
    "chromadb>=0.5.0",
    "networkx>=3.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "pydub>=0.25.1",
    "pyttsx3>=2.90",
    "speechrecognition>=3.10.0",
    "openai-whisper>=20231117",
    "webrtcvad>=2.0.10",
    "piper-tts>=1.2.0",
    "TTS>=0.22.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "Pillow>=9.5.0",
    "pandas>=1.5.0",
    "openpyxl>=3.1.3",
    "python-pptx>=0.6.21",
    "python-docx>=1.1.0",
    "reportlab>=4.1.0",
    "pywhatkit>=5.4",
    "selenium>=4.10.0",
    "pyperclip>=1.8.2",
    "plyer>=2.1.0",
    "wikipedia>=1.4.0",
    "psutil>=5.9.0",
    "pywinauto>=0.6.8",
    "telethon>=1.36.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "wasmtime>=12.0.0",
    "wasmer>=1.2.0"
]
